--- a/produit.html
+++ b/produit.html
@@ -301,8 +301,8 @@
                         <track
                             src="media/soustitres_interview.vtt"
                             kind="subtitles"
-                            srclang="fr"
-                            label="Français"
+                            srclang="en"
+                            label="Anglais"
                             default
                         >
 
@@ -336,10 +336,6 @@
 
                 <a href="contact.html#contenu-principal" class="footer-link">
                     Contact
-                </a>
-
-                <a href="#" class="footer-link">
-                    Mentions légales
                 </a>
 
                 <a href="index.html#accessibilite" class="footer-link">
